# PyTorch-On-Angel

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  command  gen_pt_model.sh
cpp/: .gitignore  CMakeLists.txt  build.sh
cpp/include/angel/: commons.h  map.h  timer.h
cpp/include/angel/pytorch/: angel_torch.h  model.h  utils.h
cpp/src/angel/: map.cc
cpp/src/angel/pytorch/: angel_torch.cc  model.cc  utils.cc
docs/: data_format_gnn.md  graph.md  public_parameters_gnn.md  recommendation.md  resource_calculation_method.md  环境搭建-刘倩第一周(1).docx  环境搭建-刘倩第一周.docx
java/: .gitignore  pom.xml
java/jni/angel/pytorch/: angel_torch.h
java/src/main/java/com/tencent/angel/pytorch/: Test.java  Torch.java
java/src/main/java/com/tencent/angel/pytorch/data/: SampleParser.java
java/src/main/java/com/tencent/angel/pytorch/torch/: TorchModel.java
java/src/main/scala/com/tencent/angel/pytorch/embedding/: Word2VecModel.scala  Word2VecParam.scala
java/src/main/scala/com/tencent/angel/pytorch/eval/: AUC.scala  Accuracy.scala  BinaryAccuracy.scala  Evaluation.scala  EvaluationM.scala  F1Score.scala  MultiLabelAUC.scala  MultiLabelAUCCollect.scala  Precision.scala  RMSE.scala  Recall.scala
java/src/main/scala/com/tencent/angel/pytorch/examples/: ClusterExample.scala  (+8 more)
python/graph/: aggregator.py  cora.py  cora_edge  cora_feature  cora_label_feature  dgi.py  dgi2.py  dgi_test.py  edgeprop.py  gamlp.py  gat.py  gcn.pt  gcn.py  gcn_modified.py  graphsage.py  graphsage_sigmoid.py  rgcn.py  sage.pt  sage.py  sage2.pt  semi_bipartite_graphsage.py  semi_han.py  sgcn.py  supervised_igmc.py  test.py  train.py  unsupervised_bipartite_graphsage.py  unsupervised_graphsage.py  unsupervised_heterogeneous_gat.py
python/graph/data/: generate.py
python/graph/data/Entities/MUTAG/mutag/processed/: data.pt
python/graph/data/Entities/MUTAG/mutag/raw/: README.txt  completeDataset.tsv
python/graph/data/generate/: EdgeTable  LabelTable
python/graph/new/: GCN.py
python/graph/nn/: __init__.py
python/graph/nn/conv/: __init__.py  bisage_conv.py  cheb_conv.py  gat_conv.py  gcn_conv.py  han_conv.py  hgat_conv.py  igmc_conv.py  rgcn_conv.py  sage_conv.py  sgcn_conv.py
python/graph/utils/: __init__.py  inits.py  loop.py  num_nodes.py  process_data.py  scatter.py  softmax.py  sparse.py
python/recommendation/: attention_fm.py  attention_net.py  attention_net_multi_head.py  census_148d_train.libsvm.tmp  dcn.py  deepandwide.py  deepfm.py  esmm.py  fm.py  lr.py  mmoe.py  pnn.py  train.py  xdeepfm.py
(+188 files in other folders)
